2010-05-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Tools/gdomap.c: security updates.
	* Tools/Makefile.postamble: make warning messages a bit clearer and
	more informative about gdomap being best started at system boot.

2010-05-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSString.h,
	* Source/NSString.m: Add 10.4 write methods.
	Fixes part of bug report #29736.

2010-05-02  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSString.h,
	* Source/NSString.m: Add a few missing 10.4 initWithContentsOfXXX:
	methods. Fixes part of bug report #29736.

2010-05-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/Additions/GSObjCRuntime.m (GSObjCAllSubclassesOfClass):
	Fix bug in previous change that made GSObjCAllSubclassesOfClass
	return all superclasses instead of all subclasses.

2010-04-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m:
	Attempt fix for bug #29720

2010-04-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSObject.m (GSAtomicIncrement, GSAtomicDecrement): Use
	local labels in PowerPC assembler code to avoid a compile error
	when this code is inlined more than once. In addition, use the
	optimized assembler definitions also on PowerPC machines running
	Darwin/Mac OS X.

2010-04-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/NSFileHandle+GNUstepBase.m: fix to only build on OSX

2010-04-22 David Wetzel <dave@turbocat.de>

    * Source/Additions/Unicode.m: replace objc_malloc with NSZoneMalloc
    and objc_free with NSZoneFree

    * Source/Additions/NSFileHandle+GNUstepBase.m: should work with ipv6
    (The old code does fail on Snow Leopard, even with ipv4 addresses.)    

    * Source/Additions/GSXML.m: added GSObjCRuntime.h
    * Headers/Additions/GNUstepBase/GSObjCRuntime.h: 
    replace objc_malloc with NSZoneMalloc and objc_free with NSZoneFree


2010-04-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: ([mainBundle]) Fix error determining whether